# simpc

./: .gitignore  CMakeLists.txt  readme.md
src/: .clang-format  CMakeLists.txt
src/header/: lexer.hh  lexer_token_type.hh  resources.hh  stdafx.hh  syntax_impl.cpp  syntax_impl.hh  syntaxer.hh  tree.hh
src/source/: lexer.cc  lexer.ccpart  main.cc  rules.txt  syntaxer.cc
src/test/: CMakeLists.txt  lexer.in  lexer.out  test_lexer.cc
